# SnakePlusPlus

./: .gitignore  CMakeLists.emscripten.txt  CMakeLists.txt  Makefile  README.md  WASM_BUILD.md  build-wasm.sh  index.html  shell.html
.history/: README_20230326232233.md
Windows/: compile.bat
src/: 2  globals.cc  globals.h  graphics.cc  graphics.h  main.cc  save.cc  save.h  snake.cc  snake.h  sounds.cc  sounds.h
